using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class EnemyControlsManager
{
    // All Enemies
    public const string EnemyVelocity = "EnemyVelocity";
    public const string EnemyDead = "EnemyDead";

    // Minion Enemy
    public const string MinionAttack = "MinionAttack";
    public const string MinionHit = "MinionHit";

}
